fix: add hiden overflow for text, fix some styles.

--- a/singolo2.css
+++ b/singolo2.css
@@ -33,31 +33,36 @@ h2 {
 }
 
 h3 {
+  max-height: 20px;
   font-family: "Lato";
   font-size: 18px;
   margin-top: 12px;
   margin-bottom: 0;
   font-weight: 900;
   color: #666d89;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .portfolio-text {
-  margin-bottom: -2px;
+  margin-bottom: 18px;
   line-height: 30px;
   font-family: "Lato";
   font-size: 18px;
   font-weight: 300;
   color: #666d89;
-  text-align: justify;
 }
 
 .peoples-text {
-  margin-top: 8px;
+  max-height: 40px;
+  margin-top: 10px;
   line-height: 22px;
   font-family: "Lato";
   font-size: 12px;
   color: #666d89;
   text-align: justify;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .portfolio-menu {
@@ -108,10 +113,10 @@ h3 {
 }
 
 .peoples-grid {
-  margin-top: 44px;
+  margin-top: 40px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 20px;
+  grid-column-gap: 19px;
 
 }
 
@@ -121,7 +126,7 @@ h3 {
 
 .socials-menu {
   box-sizing: border-box;
-  margin-top: 30px;
+  margin-top: 34px;
   display: flex;
   list-style: none;
   justify-content: space-between;
@@ -137,4 +142,9 @@ h3 {
 
 .facebook {
   padding: 6px 11px;
+}
+
+.socials-link:hover {
+  border-color:  #ff6666;
+  background-color: #ffcccc;
 }
